Initial Code and few changes in Readme and Example .env

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,14 @@ PTERO_API_KEY=your_pterodactyl_api_key_here
 # Server UUID (not the short ID)
 PTERO_SERVER_ID=full-server-uuid-here
 
-# Timeout to wait for server to come online (in milliseconds)
-PING_TIMEOUT=15000
+# Server UUID (not the short ID)
+PTERO_SERVER_ID=full-server-uuid-here
 
-# How many times to retry pinging the server
-MAX_ATTEMPTS=5
+# --- Real Server Details ---
+# The address of your actual Minecraft server that Pterodactyl runs.
+# This is needed to forward pings when the server is already online.
+# Use '127.0.0.1' if this script runs on the same machine as the Pterodactyl daemon (wings).
+MINECRAFT_SERVER_HOST=127.0.0.1
+
+# The port of your actual Minecraft server.
+MINECRAFT_SERVER_PORT=25566
