Updated Gitignore to try the code without git saying to commit changes.

--- a/.gitignore
+++ b/.gitignore
@@ -404,3 +404,11 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Environment files for Node.js
+.env
+.env.*
+
+# Node.js lock files
+package-lock.json
+yarn.lock
