--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ MINECRAFT_SERVER_HOST=127.0.0.1
 
 # The port of your actual Minecraft server.
 MINECRAFT_SERVER_PORT=25566
+
+# Set to 'true' if your Minecraft server is in premium mode (online-mode=true in server.properties).
+# Set to 'false' if your server is in non-premium/cracked mode.
+MINECRAFT_SERVER_ONLINE_MODE=true
